--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,19 @@ jobs:
     permissions:
       contents: write
     steps:
-    - uses: actions/checkout@v3
-    - uses: ncipollo/release-action@v1
-      with:
-        artifacts: "build/**/*  .zip"
+      # Download 
+      - uses: actions/download-artifact@v4
+        with:
+          path: artifacts
+      - name: Display structure of build files
+        run: ls -R artifacts/**/*.*
+
+      # Release
+      - name: Release
+        uses: softprops/action-gh-release@v2
+        # if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: |
+            artifacts/**/*.zip
+            artifacts/**/*.apk
+          tag_name: 1.0.0
