--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,6 +4,7 @@ on:
   workflow_call:
 
 jobs:
+  # Build
   buildForAllSupportedPlatforms:
     name: Build for ${{ matrix.targetPlatform }}
     runs-on: ubuntu-latest
@@ -11,13 +12,13 @@ jobs:
       fail-fast: false
       matrix:
         targetPlatform:
-          # - StandaloneOSX # Build a macOS standalone (Intel 64-bit).
+          - StandaloneOSX # Build a macOS standalone (Intel 64-bit).
           # - StandaloneWindows # Build a Windows standalone.
           - StandaloneWindows64 # Build a Windows 64-bit standalone.
-          # - StandaloneLinux64 # Build a Linux 64-bit standalone.
-          # - iOS # Build an iOS player.
-          # - Android # Build an Android .apk standalone app.
-          # - WebGL # WebGL.
+          - StandaloneLinux64 # Build a Linux 64-bit standalone.
+          - iOS # Build an iOS player.
+          - Android # Build an Android .apk standalone app.
+          - WebGL # WebGL.
     steps:
       # Checkout
       - uses: actions/checkout@v4
@@ -25,16 +26,16 @@ jobs:
           fetch-depth: 0
           lfs: true
 
+      # Free disk space
+      - if: matrix.targetPlatform == 'Android' || matrix.targetPlatform == 'WebGL'
+        uses: jlumbroso/free-disk-space@v1.3.1
+
       # Cache
       - uses: actions/cache@v4
         with:
           path: Library
           key: Library-${{ matrix.targetPlatform }}
           restore-keys: Library-
-
-      # Free disk space
-      - if: matrix.targetPlatform == 'Android' || matrix.targetPlatform == 'WebGL'
-        uses: jlumbroso/free-disk-space@v1.3.1
 
       # Build
       - uses: game-ci/unity-builder@v4
@@ -45,8 +46,26 @@ jobs:
         with:
           targetPlatform: ${{ matrix.targetPlatform }}
 
+      # Compress
+      # - name: Compress Directory
+      #   if: matrix.targetPlatform != 'Android' && matrix.targetPlatform != 'WebGL'
+      #   uses: somaz94/compress-decompress@v1
+      #   with:
+      #     command: compress
+      #     source: build/${{ matrix.targetPlatform }}
+      #     # dest: 'build'
+      #     format: zip
+      - name: Compress directory as zip
+        run: |
+          cd build/${{ matrix.targetPlatform }}
+          sudo zip -r ../${{ matrix.targetPlatform }}.zip *
+
+      - name: Display structure of build files
+        run: ls -R /home/runner/work/
+
       # Output
-      - uses: actions/upload-artifact@v4
+      - name : Upload Artifact
+        uses: actions/upload-artifact@v4
         with:
           name: Build-${{ matrix.targetPlatform }}
-          path: build/${{ matrix.targetPlatform }}
+          path: build/${{ matrix.targetPlatform }}.zip
