--- a/.github/workflows/build-godot-C#.yml
+++ b/.github/workflows/build-godot-C#.yml
@@ -2,7 +2,7 @@ name: 🚥 Build Godot C#
 on: push
 
 jobs:
-  tests:
+  build:
     name: 👀 Evaluate on 
     runs-on: ubuntu-latest
     strategy:
@@ -12,10 +12,10 @@ jobs:
         platform: 
           - name: Windows
             extension: ".exe"
+          - name: macOS
+            extension: ".app"
           - name: Linux
             extension: ".x86_64"
-          # - name: macOS
-          #   extension: ".app"
           # - name: Web
           #   extension: ".html"
     env:
@@ -65,35 +65,54 @@ jobs:
           mkdir -v -p build
           godot --headless --verbose --export-release "${{ matrix.platform.name }}" ./build/${{ github.event.repository.name }}${{ matrix.platform.extension }}
 
-      - name: 📂 Display structure of build files
-        run: ls -R ./build
-
       # Compress the build files for each platform
       - name: 🗜️ Compress
         run: |
           cd build
           sudo zip -r ./${{ matrix.platform.name }}.zip *
-          cd ..
+
+      - name: 📂 Display structure of build files
+        run: ls -R ./build
 
       - name: 📦 Upload Artifact
         uses: actions/upload-artifact@v4
         with:
           name: ${{ matrix.platform.name }}
-          path: ./${{ matrix.platform.name }}.zip
+          path: ./build/${{ matrix.platform.name }}.zip
+
+  release:
+    # if: startsWith(github.ref, 'refs/tags/')
+    runs-on: ubuntu-latest
+    needs: build
+    permissions:
+      contents: write
+    steps:
+      # Checkout
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          lfs: false
+
+      # Download 
+      - uses: actions/download-artifact@v4
+        with:
+          path: artifacts
+      - name: Display structure of build files
+        run: ls -R artifacts/**/*.*
 
       # Get latest tag
-      - name: 🏷️ Get latest tag
+      - name: 'Get Previous tag'
         id: previoustag
         uses: WyriHaximus/github-action-get-previous-tag@v1.4.0
         # with:
         #   fallback: 1.0.0 
-
+      
       # Release
-      - name: 🚢 Release
+      - name: Release
         uses: softprops/action-gh-release@v2
         # if: startsWith(github.ref, 'refs/tags/')
         with:
           files: |
-            build/*.zip
-            build/*.apk
+            artifacts/**/*.zip
+            artifacts/**/*.apk
           tag_name: ${{ steps.previoustag.outputs.tag }}
